--- a/styles.css
+++ b/styles.css
@@ -15,7 +15,23 @@
 body {
   font-size: 18px;
   width: 100%;
-  background-color: var(--main-bg-color);
+   min-height: 100vh;
+  background-image: 
+    repeating-linear-gradient(304deg, 
+      rgba(89,89,89, 0) 0,
+      #a6a6a6 75vmax,
+      #a6a6a6 calc(75vmax - 5px),
+      #a6a6a6 75vmax
+    ),
+    repeating-linear-gradient(206deg, 
+      rgba(89,89,89, 0) 0,
+      #c2bec6 50vmax,
+      #c2bec6 calc(50vmax - 5px),
+      #c2bec6 50vmax
+    );
+
+  background-color: #595959;
+  background-size: 100% 100%;
 }
 /* Navbar Styles */
 nav {
